fix(messages): remove visibilily as safari puts it on top and disables scroll

--- a/src/assets/styles/windows/_message.scss
+++ b/src/assets/styles/windows/_message.scss
@@ -14,11 +14,11 @@
         right: 20px;
         @include basic-a();
 
-       
+
         display: block;
         outline: 0;
         text-decoration: none;
-        
+
         background-color: var(--color-aux);
         color: var(--color-primary);
         border: 1px solid var(--color-primary);
@@ -42,11 +42,13 @@
 
     &[aria-expanded="true"] {
         opacity: 1;
+        visibility: visible;
         pointer-events: all;
     }
 
     &[aria-expanded="false"] {
         opacity: 0;
+        visibility: hidden;
         pointer-events: none;
     }
 }
